--- a/config/install/user.role.administrator.yml
+++ b/config/install/user.role.administrator.yml
@@ -1,6 +1,9 @@
+uuid: 31072016134a7cff50-7111-16618-bf50-cff50711100ea8fff50bd9e21de6231072016
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: Om6FEO7vZZMkPIbVvfxtdkWerQ2PvQM4sWUd6Q3ZnfI
 id: administrator
 label: Administrator
 weight: 2
