--- a/config/install/block.block.seven_content.yml
+++ b/config/install/block.block.seven_content.yml
@@ -1,3 +1,4 @@
+uuid: 3107201613d12cc432-07b0-19758-aa3b-cc43207b0dd2e11aa3bcca9ed272931072016
 langcode: en
 status: true
 dependencies:
@@ -5,6 +6,8 @@ dependencies:
     - system
   theme:
     - seven
+_core:
+  default_config_hash: YRY68JWkaUiGeZlWMv1nzeIgDm0ZZwXYgpqUpLFzwAY
 id: seven_content
 theme: seven
 region: content
