--- a/config/install/core.base_field_override.node.page.promote.yml
+++ b/config/install/core.base_field_override.node.page.promote.yml
@@ -1,8 +1,11 @@
+uuid: 31072016130c7b11e7-fbd6-16412-9f4b-b11e7fbd6101cf85f4be2a25a35a731072016
 langcode: en
 status: true
 dependencies:
   config:
     - node.type.page
+_core:
+  default_config_hash: fPUEnm4T5zfZRr3ttDUqq7yCDd2uW3clWD-pvos4tlQ
 id: node.page.promote
 field_name: promote
 entity_type: node
