--- a/config/install/core.entity_form_display.block_content.basic.default.yml
+++ b/config/install/core.entity_form_display.block_content.basic.default.yml
@@ -1,3 +1,4 @@
+uuid: 310720161399edd442-b283-17759-9134-dd442b283f55f5cd134410d99b49731072016
 langcode: en
 status: true
 dependencies:
@@ -6,6 +7,8 @@ dependencies:
     - field.field.block_content.basic.body
   module:
     - text
+_core:
+  default_config_hash: kv6gwb6PJ8DcMSj5kgsd52qCIHl1xkxBDL5_AMm-g8k
 id: block_content.basic.default
 targetEntityType: block_content
 bundle: basic
