--- a/config/install/core.entity_view_display.comment.comment.default.yml
+++ b/config/install/core.entity_view_display.comment.comment.default.yml
@@ -1,3 +1,4 @@
+uuid: 3107201613e5865fa0-d9d7-17855-b507-65fa0d9d775bf42f507a0b957703d31072016
 langcode: en
 status: true
 dependencies:
@@ -6,6 +7,8 @@ dependencies:
     - field.field.comment.comment.comment_body
   module:
     - text
+_core:
+  default_config_hash: 1yBeJcGufCbnbSolmaYgTIXZWYUaO7kw6xszGA8TYs8
 id: comment.comment.default
 targetEntityType: comment
 bundle: comment
