--- a/config/install/core.entity_view_display.node.article.teaser.yml
+++ b/config/install/core.entity_view_display.node.article.teaser.yml
@@ -1,3 +1,4 @@
+uuid: 310720161308f19b41-9917-20184-b66b-19b419917bed864f66b0cc2ce340531072016
 langcode: en
 status: true
 dependencies:
@@ -13,6 +14,8 @@ dependencies:
     - image
     - text
     - user
+_core:
+  default_config_hash: U8ghxJXn8JE2p6Q2wLpPWAxpz4r_8crL1LxtapSrHAE
 id: node.article.teaser
 targetEntityType: node
 bundle: article
