--- a/config/install/core.entity_view_display.node.page.teaser.yml
+++ b/config/install/core.entity_view_display.node.page.teaser.yml
@@ -1,3 +1,4 @@
+uuid: 3107201613dcbd17da-8000-19893-b8da-d17da80000db5fd78da0c46613bee31072016
 langcode: en
 status: true
 dependencies:
@@ -8,6 +9,8 @@ dependencies:
   module:
     - text
     - user
+_core:
+  default_config_hash: rN2zrScZAJ9xB16hm_Deb9QJKy6JXnn0PdI2n5Z3KRs
 id: node.page.teaser
 targetEntityType: node
 bundle: page
