--- a/config/install/core.entity_view_display.user.user.compact.yml
+++ b/config/install/core.entity_view_display.user.user.compact.yml
@@ -1,3 +1,4 @@
+uuid: 3107201613fd7a34e1-8c6f-16978-aedd-a34e18c6fb2526a6edd9c39e9ee7b31072016
 langcode: en
 status: true
 dependencies:
@@ -8,6 +9,8 @@ dependencies:
   module:
     - image
     - user
+_core:
+  default_config_hash: C3k_McOy8bL8rTnIjspy5OfFdgqV1z6OdGZaI-tO5eM
 id: user.user.compact
 targetEntityType: user
 bundle: user
