--- a/config/install/core.entity_view_display.user.user.default.yml
+++ b/config/install/core.entity_view_display.user.user.default.yml
@@ -1,3 +1,4 @@
+uuid: 31072016132ff03f69-91c7-16660-86fc-03f6991c751146546fced5aba179131072016
 langcode: en
 status: true
 dependencies:
@@ -7,6 +8,8 @@ dependencies:
   module:
     - image
     - user
+_core:
+  default_config_hash: L2mtwGWH_7wDRCMIR4r_Iu_jmvQ10DV1L8ht8iNZ5qY
 id: user.user.default
 targetEntityType: user
 bundle: user
