--- a/config/install/field.field.block_content.basic.body.yml
+++ b/config/install/field.field.block_content.basic.body.yml
@@ -1,3 +1,4 @@
+uuid: 31072016136e3da210-ff79-19277-be35-da210ff790b4d75fe35761ab53e5831072016
 langcode: en
 status: true
 dependencies:
@@ -6,6 +7,8 @@ dependencies:
     - field.storage.block_content.body
   module:
     - text
+_core:
+  default_config_hash: R__6wc-rMfFMO8d7jcgqnqiA92j8spKhcc5MiqecrMc
 id: block_content.basic.body
 field_name: body
 entity_type: block_content
