--- a/config/install/field.field.comment.comment.comment_body.yml
+++ b/config/install/field.field.comment.comment.comment_body.yml
@@ -1,3 +1,4 @@
+uuid: 31072016138fd71e92-1642-16905-b8ff-71e92164212094bf8ff7db35b355931072016
 langcode: en
 status: true
 dependencies:
@@ -6,6 +7,8 @@ dependencies:
     - field.storage.comment.comment_body
   module:
     - text
+_core:
+  default_config_hash: TmAKjNrJ7RR60YpqvJq_QqEewYe_S8Kd23n8VRCqiWs
 id: comment.comment.comment_body
 field_name: comment_body
 entity_type: comment
