--- a/config/install/field.field.node.page.body.yml
+++ b/config/install/field.field.node.page.body.yml
@@ -1,3 +1,4 @@
+uuid: 310720161319c83d43-1142-19977-acee-83d4311422e090d2ceef99b4bd66c31072016
 langcode: en
 status: true
 dependencies:
@@ -6,6 +7,8 @@ dependencies:
     - node.type.page
   module:
     - text
+_core:
+  default_config_hash: rUop-8b6hvxxDYbv-KobTfNIBNbPY9qOPl8f6kBNSpw
 id: node.page.body
 field_name: body
 entity_type: node
