--- a/config/install/field.field.user.user.user_picture.yml
+++ b/config/install/field.field.user.user.user_picture.yml
@@ -1,3 +1,4 @@
+uuid: 3107201613857263ec-3a2e-19892-902c-263ec3a2e9db435102c0fa51b4e8e31072016
 langcode: en
 status: true
 dependencies:
@@ -6,6 +7,8 @@ dependencies:
   module:
     - image
     - user
+_core:
+  default_config_hash: cL7i1kgJvlJa6H00f0E_fZ2KdD1ag0ASpLts0K-KNII
 id: user.user.user_picture
 field_name: user_picture
 entity_type: user
