--- a/config/install/field.storage.node.comment.yml
+++ b/config/install/field.storage.node.comment.yml
@@ -1,9 +1,12 @@
+uuid: 31072016134967627d-1448-16985-95c8-7627d144812598ad5c89b3b87f2b431072016
 langcode: en
 status: true
 dependencies:
   module:
     - comment
     - node
+_core:
+  default_config_hash: ktCna9xmWvYZIUfOCUyDQvedn5RtnS4CRmEIwNmvYjc
 id: node.comment
 field_name: comment
 entity_type: node
