--- a/config/install/field.storage.node.field_image.yml
+++ b/config/install/field.storage.node.field_image.yml
@@ -1,3 +1,4 @@
+uuid: 406d98e5-862a-4ecb-8ecc-a2be983c8fe0
 langcode: en
 status: true
 dependencies:
@@ -5,6 +6,8 @@ dependencies:
     - file
     - image
     - node
+_core:
+  default_config_hash: SkXIPKZYiIMMtnBmfnxk58RYfbZ8cHSw5NZPY_JByME
 id: node.field_image
 field_name: field_image
 entity_type: node
