--- a/config/install/field.storage.node.field_tags.yml
+++ b/config/install/field.storage.node.field_tags.yml
@@ -1,9 +1,12 @@
+uuid: 3107201613dc2d55f7-194a-20045-999d-d55f7194a4e4d0e999d6b0b4f05f731072016
 langcode: en
 status: true
 dependencies:
   module:
     - node
     - taxonomy
+_core:
+  default_config_hash: WpOE_bs8Bs_HY2ns7n2r__de-xno0-Bxkqep5-MsHAs
 id: node.field_tags
 field_name: field_tags
 entity_type: node
