--- a/config/install/rdf.mapping.comment.comment.yml
+++ b/config/install/rdf.mapping.comment.comment.yml
@@ -1,3 +1,4 @@
+uuid: 3107201613eb852ee7-1e4e-18018-82c9-52ee71e4ef662a782c94059bfb90231072016
 langcode: en
 status: true
 dependencies:
@@ -5,6 +6,8 @@ dependencies:
     - comment.type.comment
   module:
     - comment
+_core:
+  default_config_hash: uETe6XupRGKDForx2MpY0pMOEu6CzGgdCAZZOKkbgmk
 id: comment.comment
 targetEntityType: comment
 bundle: comment
