--- a/config/install/rdf.mapping.node.article.yml
+++ b/config/install/rdf.mapping.node.article.yml
@@ -1,3 +1,4 @@
+uuid: 31072016138bea655d-989e-17455-858d-a655d989e242fed058d4496590f0231072016
 langcode: en
 status: true
 dependencies:
@@ -5,6 +6,8 @@ dependencies:
     - node.type.article
   module:
     - node
+_core:
+  default_config_hash: IdobJe379eDudt7-bXFfJjF7pDqFl-kYxVFtpWrgkro
 id: node.article
 targetEntityType: node
 bundle: article
