--- a/config/install/rdf.mapping.node.page.yml
+++ b/config/install/rdf.mapping.node.page.yml
@@ -1,3 +1,4 @@
+uuid: 3107201613a602ff57-7848-18645-800e-2ff577848f8d5fe800e333c35a24531072016
 langcode: en
 status: true
 dependencies:
@@ -5,6 +6,8 @@ dependencies:
     - node.type.page
   module:
     - node
+_core:
+  default_config_hash: 32LxRnl4Wesvzqyfp7HnD0-U9-wxrLBn76pqY5XGNAE
 id: node.page
 targetEntityType: node
 bundle: page
