Fix theme settings and name for some blocks

--- a/config/install/block.block.masradix_markaspotmap.yml
+++ b/config/install/block.block.masradix_markaspotmap.yml
@@ -5,9 +5,9 @@ dependencies:
     - markaspot_map
     - system
   theme:
-    - radix
-id: radix_markaspotmap
-theme: radix
+    - masradix
+id: masradix_markaspotmap
+theme: masradix
 region: content
 weight: -3
 provider: null
