--- a/config/install/system.menu.main.yml
+++ b/config/install/system.menu.main.yml
@@ -1,9 +1,8 @@
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: Q2Ra3jfoIVk0f3SjxJX61byRQFVBAbpzYDQOiY-kno8
 id: main
+weight: 2
 label: 'Main navigation'
 description: 'Site section links'
 locked: true
