Clean up and add permissions

--- a/config/install/user.role.anonymous.yml
+++ b/config/install/user.role.anonymous.yml
@@ -5,4 +5,10 @@ id: anonymous
 label: 'Anonymous user'
 weight: 0
 is_admin: false
-permissions: {  }
+permissions:
+  - 'access content'
+  - 'use exclude node title'
+  - 'access comments'
+  - 'access site-wide contact form'
+  - 'search content'
+  - 'access open311 extension'
