--- a/config/install/block.block.radix_messages.yml
+++ b/config/install/block.block.radix_messages.yml
@@ -1,17 +1,17 @@
-uuid: 0909201613658f0726-c511-17815-bc66-f0726c5114597273c661bb0d7f32a09092016
+uuid: 0909201613df26a860-8ef9-17105-8aaa-6a8608ef962d1818aaa628afae86d09092016
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - system
   theme:
-    - seven
+    - radix
 _core:
   default_config_hash: CP-np8GJMH53AAw18zND1natTGyy8Ft7dgnBSy5PoXQ
-id: seven_messages
-theme: seven
-region: '-1'
-weight: -3
+id: radix_messages
+theme: radix
+region: content
+weight: -2
 provider: null
 plugin: system_messages_block
 settings:
