--- a/config/install/block.block.seven_content.yml
+++ b/config/install/block.block.seven_content.yml
@@ -1,3 +1,4 @@
+uuid: 08092016130c1e633b-4c40-17194-a0dd-e633b4c40332ae660dd46cf29f1bd08092016
 langcode: en
 status: true
 dependencies:
@@ -5,6 +6,8 @@ dependencies:
     - system
   theme:
     - seven
+_core:
+  default_config_hash: EbabKvR-Xw77ku4bcjWugu3iZceGwL7osFFY7-S0FVM
 id: seven_content
 theme: seven
 region: content
