--- a/config/install/block.block.seven_login.yml
+++ b/config/install/block.block.seven_login.yml
@@ -1,3 +1,4 @@
+uuid: 080920161330ff4137-1612-20010-a536-f413716129e2abe2536f6951e84f008092016
 langcode: en
 status: true
 dependencies:
@@ -5,10 +6,12 @@ dependencies:
     - user
   theme:
     - seven
+_core:
+  default_config_hash: 371mQ43lvuGZAsjvrRPHocbsfgXFQBsaRRbtJMlZO_0
 id: seven_login
 theme: seven
 region: content
-weight: 10
+weight: -8
 provider: null
 plugin: user_login_block
 settings:
