--- a/config/install/block.block.seven_pagetitle.yml
+++ b/config/install/block.block.seven_pagetitle.yml
@@ -1,14 +1,14 @@
-uuid: 08092016135e2c9658-ba4b-19230-a508-c9658ba4b5b1e65650895f7044a3908092016
+uuid: 09092016131ef9c4df-e428-17434-995f-9c4dfe428841afc995f6865d03dd309092016
 langcode: en
-status: false
+status: true
 dependencies:
   theme:
     - seven
 _core:
-  default_config_hash: IGz3jkbv7F93IDYHihgo5cp_K6S-J4ilLqn-JNUqwTU
-id: seven_page_title
+  default_config_hash: 2BHefaPqnTecwWsku0RBld8NsElaO5V8cD1isfjIyFk
+id: seven_pagetitle
 theme: seven
-region: '-1'
+region: header
 weight: -7
 provider: null
 plugin: page_title_block
