--- a/markaspot.links.menu.yml
+++ b/markaspot.links.menu.yml
@@ -2,3 +2,7 @@ markaspot.front_page:
   title: 'Home'
   route_name: '<front>'
   menu_name: main
+markaspot.add:
+  title: 'Add Request'
+  route_name: service_request.add
+  menu_name: main
