Add Mark-a-Spot Default Content module

--- a/markaspot.info.yml
+++ b/markaspot.info.yml
@@ -72,6 +72,8 @@ dependencies:
   - views_infinite_scroll
   - views_ui
   - views_bootstrap
+  - markaspot_default_content
+
 themes:
   - masradix
   - seven
