Make titles searchable as full text

--- a/config/install/search_api.index.service_requests.yml
+++ b/config/install/search_api.index.service_requests.yml
@@ -21,7 +21,7 @@ field_settings:
     label: Title
     datasource_id: 'entity:node'
     property_path: title
-    type: string
+    type: text
   nid:
     label: ID
     datasource_id: 'entity:node'
